parser/c_parser/src/parser.output
Terminals unused in grammar

   T_ELLIPSIS
   T_EXCLAMATION
   T_TILDE


Grammar

    0 $accept: ROOT $end

    1 ROOT: PROGRAM

    2 PROGRAM: ALL_DECLEARARION
    3        | PROGRAM ALL_DECLEARARION

    4 ALL_DECLEARARION: DECLARATION
    5                 | FUNCTION

    6 FUNCTION: DECLARATION_SPECIFIERS DECLARATOR T_LBRACKET PARAM_DECLARATION_LIST T_RBRACKET COMPOUND_STATEMENT
    7         | DECLARATION_SPECIFIERS DECLARATOR T_LBRACKET T_RBRACKET COMPOUND_STATEMENT
    8         | DECLARATOR T_LBRACKET PARAM_DECLARATION_LIST T_RBRACKET COMPOUND_STATEMENT
    9         | DECLARATOR T_LBRACKET T_RBRACKET COMPOUND_STATEMENT

   10 COMPOUND_STATEMENT: T_LCURLYBRACKET T_RCURLYBRACKET
   11                   | T_LCURLYBRACKET DECLARATION_LIST T_RCURLYBRACKET
   12                   | T_LCURLYBRACKET STATEMENT_LIST T_RCURLYBRACKET
   13                   | T_LCURLYBRACKET DECLARATION_LIST STATEMENT_LIST T_RCURLYBRACKET

   14 STATEMENT_LIST: STATEMENT
   15               | STATEMENT_LIST STATEMENT

   16 STATEMENT: COMPOUND_STATEMENT
   17          | IF_STATEMENT
   18          | JUMP_STATEMENT
   19          | ITERATION_STATEMENT

   20 ITERATION_STATEMENT: T_WHILE T_LBRACKET EXPRESSION T_RBRACKET STATEMENT
   21                    | T_DO STATEMENT T_WHILE T_LBRACKET EXPRESSION T_RBRACKET T_SIMICOLOUMN
   22                    | T_FOR T_LBRACKET EXPRESSION_STATEMENT EXPRESSION_STATEMENT T_RBRACKET STATEMENT
   23                    | T_FOR T_LBRACKET EXPRESSION_STATEMENT EXPRESSION_STATEMENT EXPRESSION T_RBRACKET STATEMENT

   24 EXPRESSION_STATEMENT: T_SIMICOLOUMN
   25                     | EXPRESSION T_SIMICOLOUMN

   26 IF_STATEMENT: T_IF T_LBRACKET EXPRESSION T_RBRACKET STATEMENT
   27             | T_IF T_LBRACKET EXPRESSION T_RBRACKET STATEMENT T_ELSE STATEMENT

   28 JUMP_STATEMENT: T_RETURN T_SIMICOLOUMN
   29               | T_RETURN EXPRESSION T_SIMICOLOUMN
   30               | T_GOTO T_VARIABLE T_SIMICOLOUMN
   31               | T_BREAK T_SIMICOLOUMN
   32               | T_CONTINUE T_SIMICOLOUMN

   33 EXPRESSION: INITIALIZER
   34           | T_LBRACKET ASSIGNMENT_EXPRESSION T_RBRACKET

   35 DECLARATION_LIST: DECLARATION
   36                 | DECLARATION_LIST DECLARATION

   37 PARAM_DECLARATION_LIST: DECLARATION_SPECIFIERS DECLARATOR
   38                       | DECLARATION_SPECIFIERS DECLARATOR T_COMMA PARAM_DECLARATION_LIST

   39 DECLARATION: DECLARATION_SPECIFIERS T_SIMICOLOUMN
   40            | DECLARATION_SPECIFIERS INIT_DECLARATOR_LIST T_SIMICOLOUMN
   41            | RE_DECLARATION

   42 RE_DECLARATION: INIT_DECLARATOR_LIST T_SIMICOLOUMN

   43 DECLARATION_SPECIFIERS: TYPE_SPECIFIER

   44 INIT_DECLARATOR_LIST: INIT_DECLARATOR

   45 INIT_DECLARATOR: DECLARATOR
   46                | DECLARATOR T_EQUAL INITIALIZER

   47 DECLARATOR: T_STAR DIRECT_DECLARATOR
   48           | DIRECT_DECLARATOR

   49 DIRECT_DECLARATOR: T_VARIABLE

   50 TYPE_SPECIFIER: T_INT

   51 INITIALIZER: ASSIGNMENT_EXPRESSION

   52 ASSIGNMENT_EXPRESSION: CONDITIONAL_EXPRESSION
   53                      | UNARY_EXPRESSION ASSIGNMENT_OPERATOR ASSIGNMENT_EXPRESSION

   54 CONDITIONAL_EXPRESSION: LOGICAL_OR_EXPRESSION
   55                       | LOGICAL_OR_EXPRESSION T_QUESTIONMARK EXPRESSION T_COLOUMN CONDITIONAL_EXPRESSION

   56 LOGICAL_OR_EXPRESSION: LOGICAL_AND_EXPRESSION
   57                      | LOGICAL_AND_EXPRESSION T_OR_OP INCLUSIVE_OR_EXPRESSION

   58 LOGICAL_AND_EXPRESSION: INCLUSIVE_OR_EXPRESSION
   59                       | LOGICAL_AND_EXPRESSION T_AND_OP INCLUSIVE_OR_EXPRESSION

   60 INCLUSIVE_OR_EXPRESSION: EXCLUSIVE_OR_EXPRESSION
   61                        | INCLUSIVE_OR_EXPRESSION T_INEXCLUS_OR EXCLUSIVE_OR_EXPRESSION

   62 EXCLUSIVE_OR_EXPRESSION: AND_EXPRESSION
   63                        | EXCLUSIVE_OR_EXPRESSION T_EXCLUS_OR AND_EXPRESSION

   64 AND_EXPRESSION: EQUALITY_EXPRESSION
   65               | AND_EXPRESSION T_AMPERSAND EQUALITY_EXPRESSION

   66 EQUALITY_EXPRESSION: RELATIONAL_EXPRESSION
   67                    | EQUALITY_EXPRESSION T_EQ_OP RELATIONAL_EXPRESSION
   68                    | EQUALITY_EXPRESSION T_NE_OP RELATIONAL_EXPRESSION

   69 RELATIONAL_EXPRESSION: SHIFT_EXPRESSION
   70                      | RELATIONAL_EXPRESSION T_LE_OP SHIFT_EXPRESSION
   71                      | RELATIONAL_EXPRESSION T_GE_OP SHIFT_EXPRESSION

   72 SHIFT_EXPRESSION: ADDITIVE_EXPRESSION
   73                 | SHIFT_EXPRESSION T_LEFT_OP ADDITIVE_EXPRESSION
   74                 | SHIFT_EXPRESSION T_RIGHT_OP ADDITIVE_EXPRESSION

   75 ADDITIVE_EXPRESSION: MULTIPLICATIVE_EXPRESSION
   76                    | ADDITIVE_EXPRESSION T_PLUS MULTIPLICATIVE_EXPRESSION
   77                    | ADDITIVE_EXPRESSION T_MINUS MULTIPLICATIVE_EXPRESSION

   78 MULTIPLICATIVE_EXPRESSION: UNARY_EXPRESSION
   79                          | MULTIPLICATIVE_EXPRESSION T_STAR UNARY_EXPRESSION
   80                          | MULTIPLICATIVE_EXPRESSION T_DIVIDE UNARY_EXPRESSION
   81                          | MULTIPLICATIVE_EXPRESSION T_MOD UNARY_EXPRESSION

   82 UNARY_EXPRESSION: POSTFIX_EXPRESSION
   83                 | OPERATOR UNARY_EXPRESSION
   84                 | T_INC_OP UNARY_EXPRESSION
   85                 | T_DEC_OP UNARY_EXPRESSION
   86                 | T_SIZEOF UNARY_EXPRESSION

   87 OPERATOR: T_MINUS
   88         | T_PLUS
   89         | T_STAR
   90         | T_DIVIDE
   91         | T_MOD
   92         | T_EQUAL

   93 ASSIGNMENT_OPERATOR: T_EQUAL
   94                    | T_MUL_ASSIGN
   95                    | T_DIV_ASSIGN
   96                    | T_MOD_ASSIGN
   97                    | T_ADD_ASSIGN
   98                    | T_SUB_ASSIGN
   99                    | T_LEFT_ASSIGN
  100                    | T_RIGHT_ASSIGN
  101                    | T_AND_ASSIGN
  102                    | T_XOR_ASSIGN
  103                    | T_OR_ASSIGN

  104 POSTFIX_EXPRESSION: PRIMARY_EXPRESSION
  105                   | POSTFIX_EXPRESSION T_LSQUAREBRACKET EXPRESSION T_RSQUAREBRACKET
  106                   | POSTFIX_EXPRESSION T_LBRACKET T_RBRACKET
  107                   | POSTFIX_EXPRESSION T_DOT T_VARIABLE
  108                   | POSTFIX_EXPRESSION T_PTR_OP T_VARIABLE
  109                   | POSTFIX_EXPRESSION T_INC_OP
  110                   | POSTFIX_EXPRESSION T_DEC_OP

  111 PRIMARY_EXPRESSION: T_VARIABLE
  112                   | T_NUMBER


Terminals, with rules where they appear

$end (0) 0
error (256)
T_FOR (258) 22 23
T_IF (259) 26 27
T_INT (260) 50
T_RETURN (261) 28 29
T_WHILE (262) 20 21
T_NUMBER (263) 112
T_VARIABLE (264) 30 49 107 108 111
T_ELLIPSIS (265)
T_RIGHT_ASSIGN (266) 100
T_LEFT_ASSIGN (267) 99
T_ADD_ASSIGN (268) 97
T_SUB_ASSIGN (269) 98
T_MUL_ASSIGN (270) 94
T_DIV_ASSIGN (271) 95
T_MOD_ASSIGN (272) 96
T_AND_ASSIGN (273) 101
T_XOR_ASSIGN (274) 102
T_OR_ASSIGN (275) 103
T_RIGHT_OP (276) 74
T_LEFT_OP (277) 73
T_INC_OP (278) 84 109
T_DEC_OP (279) 85 110
T_PTR_OP (280) 108
T_AND_OP (281) 59
T_OR_OP (282) 57
T_LE_OP (283) 70
T_GE_OP (284) 71
T_EQ_OP (285) 67
T_NE_OP (286) 68
T_INEXCLUS_OR (287) 61
T_EXCLUS_OR (288) 63
T_SIMICOLOUMN (289) 21 24 25 28 29 30 31 32 39 40 42
T_LCURLYBRACKET (290) 10 11 12 13
T_RCURLYBRACKET (291) 10 11 12 13
T_COMMA (292) 38
T_COLOUMN (293) 55
T_EQUAL (294) 46 92 93
T_LBRACKET (295) 6 7 8 9 20 21 22 23 26 27 34 106
T_RBRACKET (296) 6 7 8 9 20 21 22 23 26 27 34 106
T_LSQUAREBRACKET (297) 105
T_RSQUAREBRACKET (298) 105
T_DOT (299) 107
T_AMPERSAND (300) 65
T_EXCLAMATION (301)
T_TILDE (302)
T_MINUS (303) 77 87
T_PLUS (304) 76 88
T_STAR (305) 47 79 89
T_DIVIDE (306) 80 90
T_MOD (307) 81 91
T_QUESTIONMARK (308) 55
T_GOTO (309) 30
T_BREAK (310) 31
T_CONTINUE (311) 32
T_DO (312) 21
T_SIZEOF (313) 86
"then" (314)
T_ELSE (315) 27


Nonterminals, with rules where they appear

$accept (61)
    on left: 0
ROOT (62)
    on left: 1, on right: 0
PROGRAM (63)
    on left: 2 3, on right: 1 3
ALL_DECLEARARION (64)
    on left: 4 5, on right: 2 3
FUNCTION (65)
    on left: 6 7 8 9, on right: 5
COMPOUND_STATEMENT (66)
    on left: 10 11 12 13, on right: 6 7 8 9 16
STATEMENT_LIST (67)
    on left: 14 15, on right: 12 13 15
STATEMENT (68)
    on left: 16 17 18 19, on right: 14 15 20 21 22 23 26 27
ITERATION_STATEMENT (69)
    on left: 20 21 22 23, on right: 19
EXPRESSION_STATEMENT (70)
    on left: 24 25, on right: 22 23
IF_STATEMENT (71)
    on left: 26 27, on right: 17
JUMP_STATEMENT (72)
    on left: 28 29 30 31 32, on right: 18
EXPRESSION (73)
    on left: 33 34, on right: 20 21 23 25 26 27 29 55 105
DECLARATION_LIST (74)
    on left: 35 36, on right: 11 13 36
PARAM_DECLARATION_LIST (75)
    on left: 37 38, on right: 6 8 38
DECLARATION (76)
    on left: 39 40 41, on right: 4 35 36
RE_DECLARATION (77)
    on left: 42, on right: 41
DECLARATION_SPECIFIERS (78)
    on left: 43, on right: 6 7 37 38 39 40
INIT_DECLARATOR_LIST (79)
    on left: 44, on right: 40 42
INIT_DECLARATOR (80)
    on left: 45 46, on right: 44
DECLARATOR (81)
    on left: 47 48, on right: 6 7 8 9 37 38 45 46
DIRECT_DECLARATOR (82)
    on left: 49, on right: 47 48
TYPE_SPECIFIER (83)
    on left: 50, on right: 43
INITIALIZER (84)
    on left: 51, on right: 33 46
ASSIGNMENT_EXPRESSION (85)
    on left: 52 53, on right: 34 51 53
CONDITIONAL_EXPRESSION (86)
    on left: 54 55, on right: 52 55
LOGICAL_OR_EXPRESSION (87)
    on left: 56 57, on right: 54 55
LOGICAL_AND_EXPRESSION (88)
    on left: 58 59, on right: 56 57 59
INCLUSIVE_OR_EXPRESSION (89)
    on left: 60 61, on right: 57 58 59 61
EXCLUSIVE_OR_EXPRESSION (90)
    on left: 62 63, on right: 60 61 63
AND_EXPRESSION (91)
    on left: 64 65, on right: 62 63 65
EQUALITY_EXPRESSION (92)
    on left: 66 67 68, on right: 64 65 67 68
RELATIONAL_EXPRESSION (93)
    on left: 69 70 71, on right: 66 67 68 70 71
SHIFT_EXPRESSION (94)
    on left: 72 73 74, on right: 69 70 71 73 74
ADDITIVE_EXPRESSION (95)
    on left: 75 76 77, on right: 72 73 74 76 77
MULTIPLICATIVE_EXPRESSION (96)
    on left: 78 79 80 81, on right: 75 76 77 79 80 81
UNARY_EXPRESSION (97)
    on left: 82 83 84 85 86, on right: 53 78 79 80 81 83 84 85 86
OPERATOR (98)
    on left: 87 88 89 90 91 92, on right: 83
ASSIGNMENT_OPERATOR (99)
    on left: 93 94 95 96 97 98 99 100 101 102 103, on right: 53
POSTFIX_EXPRESSION (100)
    on left: 104 105 106 107 108 109 110, on right: 82 105 106 107
    108 109 110
PRIMARY_EXPRESSION (101)
    on left: 111 112, on right: 104


State 0

    0 $accept: . ROOT $end

    T_INT       shift, and go to state 1
    T_VARIABLE  shift, and go to state 2
    T_STAR      shift, and go to state 3

    ROOT                    go to state 4
    PROGRAM                 go to state 5
    ALL_DECLEARARION        go to state 6
    FUNCTION                go to state 7
    DECLARATION             go to state 8
    RE_DECLARATION          go to state 9
    DECLARATION_SPECIFIERS  go to state 10
    INIT_DECLARATOR_LIST    go to state 11
    INIT_DECLARATOR         go to state 12
    DECLARATOR              go to state 13
    DIRECT_DECLARATOR       go to state 14
    TYPE_SPECIFIER          go to state 15


State 1

   50 TYPE_SPECIFIER: T_INT .

    $default  reduce using rule 50 (TYPE_SPECIFIER)


State 2

   49 DIRECT_DECLARATOR: T_VARIABLE .

    $default  reduce using rule 49 (DIRECT_DECLARATOR)


State 3

   47 DECLARATOR: T_STAR . DIRECT_DECLARATOR

    T_VARIABLE  shift, and go to state 2

    DIRECT_DECLARATOR  go to state 16


State 4

    0 $accept: ROOT . $end

    $end  shift, and go to state 17


State 5

    1 ROOT: PROGRAM .
    3 PROGRAM: PROGRAM . ALL_DECLEARARION

    T_INT       shift, and go to state 1
    T_VARIABLE  shift, and go to state 2
    T_STAR      shift, and go to state 3

    $default  reduce using rule 1 (ROOT)

    ALL_DECLEARARION        go to state 18
    FUNCTION                go to state 7
    DECLARATION             go to state 8
    RE_DECLARATION          go to state 9
    DECLARATION_SPECIFIERS  go to state 10
    INIT_DECLARATOR_LIST    go to state 11
    INIT_DECLARATOR         go to state 12
    DECLARATOR              go to state 13
    DIRECT_DECLARATOR       go to state 14
    TYPE_SPECIFIER          go to state 15


State 6

    2 PROGRAM: ALL_DECLEARARION .

    $default  reduce using rule 2 (PROGRAM)


State 7

    5 ALL_DECLEARARION: FUNCTION .

    $default  reduce using rule 5 (ALL_DECLEARARION)


State 8

    4 ALL_DECLEARARION: DECLARATION .

    $default  reduce using rule 4 (ALL_DECLEARARION)


State 9

   41 DECLARATION: RE_DECLARATION .

    $default  reduce using rule 41 (DECLARATION)


State 10

    6 FUNCTION: DECLARATION_SPECIFIERS . DECLARATOR T_LBRACKET PARAM_DECLARATION_LIST T_RBRACKET COMPOUND_STATEMENT
    7         | DECLARATION_SPECIFIERS . DECLARATOR T_LBRACKET T_RBRACKET COMPOUND_STATEMENT
   39 DECLARATION: DECLARATION_SPECIFIERS . T_SIMICOLOUMN
   40            | DECLARATION_SPECIFIERS . INIT_DECLARATOR_LIST T_SIMICOLOUMN

    T_VARIABLE     shift, and go to state 2
    T_SIMICOLOUMN  shift, and go to state 19
    T_STAR         shift, and go to state 3

    INIT_DECLARATOR_LIST  go to state 20
    INIT_DECLARATOR       go to state 12
    DECLARATOR            go to state 21
    DIRECT_DECLARATOR     go to state 14


State 11

   42 RE_DECLARATION: INIT_DECLARATOR_LIST . T_SIMICOLOUMN

    T_SIMICOLOUMN  shift, and go to state 22


State 12

   44 INIT_DECLARATOR_LIST: INIT_DECLARATOR .

    $default  reduce using rule 44 (INIT_DECLARATOR_LIST)


State 13

    8 FUNCTION: DECLARATOR . T_LBRACKET PARAM_DECLARATION_LIST T_RBRACKET COMPOUND_STATEMENT
    9         | DECLARATOR . T_LBRACKET T_RBRACKET COMPOUND_STATEMENT
   45 INIT_DECLARATOR: DECLARATOR .
   46                | DECLARATOR . T_EQUAL INITIALIZER

    T_EQUAL     shift, and go to state 23
    T_LBRACKET  shift, and go to state 24

    $default  reduce using rule 45 (INIT_DECLARATOR)


State 14

   48 DECLARATOR: DIRECT_DECLARATOR .

    $default  reduce using rule 48 (DECLARATOR)


State 15

   43 DECLARATION_SPECIFIERS: TYPE_SPECIFIER .

    $default  reduce using rule 43 (DECLARATION_SPECIFIERS)


State 16

   47 DECLARATOR: T_STAR DIRECT_DECLARATOR .

    $default  reduce using rule 47 (DECLARATOR)


State 17

    0 $accept: ROOT $end .

    $default  accept


State 18

    3 PROGRAM: PROGRAM ALL_DECLEARARION .

    $default  reduce using rule 3 (PROGRAM)


State 19

   39 DECLARATION: DECLARATION_SPECIFIERS T_SIMICOLOUMN .

    $default  reduce using rule 39 (DECLARATION)


State 20

   40 DECLARATION: DECLARATION_SPECIFIERS INIT_DECLARATOR_LIST . T_SIMICOLOUMN

    T_SIMICOLOUMN  shift, and go to state 25


State 21

    6 FUNCTION: DECLARATION_SPECIFIERS DECLARATOR . T_LBRACKET PARAM_DECLARATION_LIST T_RBRACKET COMPOUND_STATEMENT
    7         | DECLARATION_SPECIFIERS DECLARATOR . T_LBRACKET T_RBRACKET COMPOUND_STATEMENT
   45 INIT_DECLARATOR: DECLARATOR .
   46                | DECLARATOR . T_EQUAL INITIALIZER

    T_EQUAL     shift, and go to state 23
    T_LBRACKET  shift, and go to state 26

    $default  reduce using rule 45 (INIT_DECLARATOR)


State 22

   42 RE_DECLARATION: INIT_DECLARATOR_LIST T_SIMICOLOUMN .

    $default  reduce using rule 42 (RE_DECLARATION)


State 23

   46 INIT_DECLARATOR: DECLARATOR T_EQUAL . INITIALIZER

    T_NUMBER    shift, and go to state 27
    T_VARIABLE  shift, and go to state 28
    T_INC_OP    shift, and go to state 29
    T_DEC_OP    shift, and go to state 30
    T_EQUAL     shift, and go to state 31
    T_MINUS     shift, and go to state 32
    T_PLUS      shift, and go to state 33
    T_STAR      shift, and go to state 34
    T_DIVIDE    shift, and go to state 35
    T_MOD       shift, and go to state 36
    T_SIZEOF    shift, and go to state 37

    INITIALIZER                go to state 38
    ASSIGNMENT_EXPRESSION      go to state 39
    CONDITIONAL_EXPRESSION     go to state 40
    LOGICAL_OR_EXPRESSION      go to state 41
    LOGICAL_AND_EXPRESSION     go to state 42
    INCLUSIVE_OR_EXPRESSION    go to state 43
    EXCLUSIVE_OR_EXPRESSION    go to state 44
    AND_EXPRESSION             go to state 45
    EQUALITY_EXPRESSION        go to state 46
    RELATIONAL_EXPRESSION      go to state 47
    SHIFT_EXPRESSION           go to state 48
    ADDITIVE_EXPRESSION        go to state 49
    MULTIPLICATIVE_EXPRESSION  go to state 50
    UNARY_EXPRESSION           go to state 51
    OPERATOR                   go to state 52
    POSTFIX_EXPRESSION         go to state 53
    PRIMARY_EXPRESSION         go to state 54


State 24

    8 FUNCTION: DECLARATOR T_LBRACKET . PARAM_DECLARATION_LIST T_RBRACKET COMPOUND_STATEMENT
    9         | DECLARATOR T_LBRACKET . T_RBRACKET COMPOUND_STATEMENT

    T_INT       shift, and go to state 1
    T_RBRACKET  shift, and go to state 55

    PARAM_DECLARATION_LIST  go to state 56
    DECLARATION_SPECIFIERS  go to state 57
    TYPE_SPECIFIER          go to state 15


State 25

   40 DECLARATION: DECLARATION_SPECIFIERS INIT_DECLARATOR_LIST T_SIMICOLOUMN .

    $default  reduce using rule 40 (DECLARATION)


State 26

    6 FUNCTION: DECLARATION_SPECIFIERS DECLARATOR T_LBRACKET . PARAM_DECLARATION_LIST T_RBRACKET COMPOUND_STATEMENT
    7         | DECLARATION_SPECIFIERS DECLARATOR T_LBRACKET . T_RBRACKET COMPOUND_STATEMENT

    T_INT       shift, and go to state 1
    T_RBRACKET  shift, and go to state 58

    PARAM_DECLARATION_LIST  go to state 59
    DECLARATION_SPECIFIERS  go to state 57
    TYPE_SPECIFIER          go to state 15


State 27

  112 PRIMARY_EXPRESSION: T_NUMBER .

    $default  reduce using rule 112 (PRIMARY_EXPRESSION)


State 28

  111 PRIMARY_EXPRESSION: T_VARIABLE .

    $default  reduce using rule 111 (PRIMARY_EXPRESSION)


State 29

   84 UNARY_EXPRESSION: T_INC_OP . UNARY_EXPRESSION

    T_NUMBER    shift, and go to state 27
    T_VARIABLE  shift, and go to state 28
    T_INC_OP    shift, and go to state 29
    T_DEC_OP    shift, and go to state 30
    T_EQUAL     shift, and go to state 31
    T_MINUS     shift, and go to state 32
    T_PLUS      shift, and go to state 33
    T_STAR      shift, and go to state 34
    T_DIVIDE    shift, and go to state 35
    T_MOD       shift, and go to state 36
    T_SIZEOF    shift, and go to state 37

    UNARY_EXPRESSION    go to state 60
    OPERATOR            go to state 52
    POSTFIX_EXPRESSION  go to state 53
    PRIMARY_EXPRESSION  go to state 54


State 30

   85 UNARY_EXPRESSION: T_DEC_OP . UNARY_EXPRESSION

    T_NUMBER    shift, and go to state 27
    T_VARIABLE  shift, and go to state 28
    T_INC_OP    shift, and go to state 29
    T_DEC_OP    shift, and go to state 30
    T_EQUAL     shift, and go to state 31
    T_MINUS     shift, and go to state 32
    T_PLUS      shift, and go to state 33
    T_STAR      shift, and go to state 34
    T_DIVIDE    shift, and go to state 35
    T_MOD       shift, and go to state 36
    T_SIZEOF    shift, and go to state 37

    UNARY_EXPRESSION    go to state 61
    OPERATOR            go to state 52
    POSTFIX_EXPRESSION  go to state 53
    PRIMARY_EXPRESSION  go to state 54


State 31

   92 OPERATOR: T_EQUAL .

    $default  reduce using rule 92 (OPERATOR)


State 32

   87 OPERATOR: T_MINUS .

    $default  reduce using rule 87 (OPERATOR)


State 33

   88 OPERATOR: T_PLUS .

    $default  reduce using rule 88 (OPERATOR)


State 34

   89 OPERATOR: T_STAR .

    $default  reduce using rule 89 (OPERATOR)


State 35

   90 OPERATOR: T_DIVIDE .

    $default  reduce using rule 90 (OPERATOR)


State 36

   91 OPERATOR: T_MOD .

    $default  reduce using rule 91 (OPERATOR)


State 37

   86 UNARY_EXPRESSION: T_SIZEOF . UNARY_EXPRESSION

    T_NUMBER    shift, and go to state 27
    T_VARIABLE  shift, and go to state 28
    T_INC_OP    shift, and go to state 29
    T_DEC_OP    shift, and go to state 30
    T_EQUAL     shift, and go to state 31
    T_MINUS     shift, and go to state 32
    T_PLUS      shift, and go to state 33
    T_STAR      shift, and go to state 34
    T_DIVIDE    shift, and go to state 35
    T_MOD       shift, and go to state 36
    T_SIZEOF    shift, and go to state 37

    UNARY_EXPRESSION    go to state 62
    OPERATOR            go to state 52
    POSTFIX_EXPRESSION  go to state 53
    PRIMARY_EXPRESSION  go to state 54


State 38

   46 INIT_DECLARATOR: DECLARATOR T_EQUAL INITIALIZER .

    $default  reduce using rule 46 (INIT_DECLARATOR)


State 39

   51 INITIALIZER: ASSIGNMENT_EXPRESSION .

    $default  reduce using rule 51 (INITIALIZER)


State 40

   52 ASSIGNMENT_EXPRESSION: CONDITIONAL_EXPRESSION .

    $default  reduce using rule 52 (ASSIGNMENT_EXPRESSION)


State 41

   54 CONDITIONAL_EXPRESSION: LOGICAL_OR_EXPRESSION .
   55                       | LOGICAL_OR_EXPRESSION . T_QUESTIONMARK EXPRESSION T_COLOUMN CONDITIONAL_EXPRESSION

    T_QUESTIONMARK  shift, and go to state 63

    $default  reduce using rule 54 (CONDITIONAL_EXPRESSION)


State 42

   56 LOGICAL_OR_EXPRESSION: LOGICAL_AND_EXPRESSION .
   57                      | LOGICAL_AND_EXPRESSION . T_OR_OP INCLUSIVE_OR_EXPRESSION
   59 LOGICAL_AND_EXPRESSION: LOGICAL_AND_EXPRESSION . T_AND_OP INCLUSIVE_OR_EXPRESSION

    T_AND_OP  shift, and go to state 64
    T_OR_OP   shift, and go to state 65

    $default  reduce using rule 56 (LOGICAL_OR_EXPRESSION)


State 43

   58 LOGICAL_AND_EXPRESSION: INCLUSIVE_OR_EXPRESSION .
   61 INCLUSIVE_OR_EXPRESSION: INCLUSIVE_OR_EXPRESSION . T_INEXCLUS_OR EXCLUSIVE_OR_EXPRESSION

    T_INEXCLUS_OR  shift, and go to state 66

    $default  reduce using rule 58 (LOGICAL_AND_EXPRESSION)


State 44

   60 INCLUSIVE_OR_EXPRESSION: EXCLUSIVE_OR_EXPRESSION .
   63 EXCLUSIVE_OR_EXPRESSION: EXCLUSIVE_OR_EXPRESSION . T_EXCLUS_OR AND_EXPRESSION

    T_EXCLUS_OR  shift, and go to state 67

    $default  reduce using rule 60 (INCLUSIVE_OR_EXPRESSION)


State 45

   62 EXCLUSIVE_OR_EXPRESSION: AND_EXPRESSION .
   65 AND_EXPRESSION: AND_EXPRESSION . T_AMPERSAND EQUALITY_EXPRESSION

    T_AMPERSAND  shift, and go to state 68

    $default  reduce using rule 62 (EXCLUSIVE_OR_EXPRESSION)


State 46

   64 AND_EXPRESSION: EQUALITY_EXPRESSION .
   67 EQUALITY_EXPRESSION: EQUALITY_EXPRESSION . T_EQ_OP RELATIONAL_EXPRESSION
   68                    | EQUALITY_EXPRESSION . T_NE_OP RELATIONAL_EXPRESSION

    T_EQ_OP  shift, and go to state 69
    T_NE_OP  shift, and go to state 70

    $default  reduce using rule 64 (AND_EXPRESSION)


State 47

   66 EQUALITY_EXPRESSION: RELATIONAL_EXPRESSION .
   70 RELATIONAL_EXPRESSION: RELATIONAL_EXPRESSION . T_LE_OP SHIFT_EXPRESSION
   71                      | RELATIONAL_EXPRESSION . T_GE_OP SHIFT_EXPRESSION

    T_LE_OP  shift, and go to state 71
    T_GE_OP  shift, and go to state 72

    $default  reduce using rule 66 (EQUALITY_EXPRESSION)


State 48

   69 RELATIONAL_EXPRESSION: SHIFT_EXPRESSION .
   73 SHIFT_EXPRESSION: SHIFT_EXPRESSION . T_LEFT_OP ADDITIVE_EXPRESSION
   74                 | SHIFT_EXPRESSION . T_RIGHT_OP ADDITIVE_EXPRESSION

    T_RIGHT_OP  shift, and go to state 73
    T_LEFT_OP   shift, and go to state 74

    $default  reduce using rule 69 (RELATIONAL_EXPRESSION)


State 49

   72 SHIFT_EXPRESSION: ADDITIVE_EXPRESSION .
   76 ADDITIVE_EXPRESSION: ADDITIVE_EXPRESSION . T_PLUS MULTIPLICATIVE_EXPRESSION
   77                    | ADDITIVE_EXPRESSION . T_MINUS MULTIPLICATIVE_EXPRESSION

    T_MINUS  shift, and go to state 75
    T_PLUS   shift, and go to state 76

    $default  reduce using rule 72 (SHIFT_EXPRESSION)


State 50

   75 ADDITIVE_EXPRESSION: MULTIPLICATIVE_EXPRESSION .
   79 MULTIPLICATIVE_EXPRESSION: MULTIPLICATIVE_EXPRESSION . T_STAR UNARY_EXPRESSION
   80                          | MULTIPLICATIVE_EXPRESSION . T_DIVIDE UNARY_EXPRESSION
   81                          | MULTIPLICATIVE_EXPRESSION . T_MOD UNARY_EXPRESSION

    T_STAR    shift, and go to state 77
    T_DIVIDE  shift, and go to state 78
    T_MOD     shift, and go to state 79

    $default  reduce using rule 75 (ADDITIVE_EXPRESSION)


State 51

   53 ASSIGNMENT_EXPRESSION: UNARY_EXPRESSION . ASSIGNMENT_OPERATOR ASSIGNMENT_EXPRESSION
   78 MULTIPLICATIVE_EXPRESSION: UNARY_EXPRESSION .

    T_RIGHT_ASSIGN  shift, and go to state 80
    T_LEFT_ASSIGN   shift, and go to state 81
    T_ADD_ASSIGN    shift, and go to state 82
    T_SUB_ASSIGN    shift, and go to state 83
    T_MUL_ASSIGN    shift, and go to state 84
    T_DIV_ASSIGN    shift, and go to state 85
    T_MOD_ASSIGN    shift, and go to state 86
    T_AND_ASSIGN    shift, and go to state 87
    T_XOR_ASSIGN    shift, and go to state 88
    T_OR_ASSIGN     shift, and go to state 89
    T_EQUAL         shift, and go to state 90

    $default  reduce using rule 78 (MULTIPLICATIVE_EXPRESSION)

    ASSIGNMENT_OPERATOR  go to state 91


State 52

   83 UNARY_EXPRESSION: OPERATOR . UNARY_EXPRESSION

    T_NUMBER    shift, and go to state 27
    T_VARIABLE  shift, and go to state 28
    T_INC_OP    shift, and go to state 29
    T_DEC_OP    shift, and go to state 30
    T_EQUAL     shift, and go to state 31
    T_MINUS     shift, and go to state 32
    T_PLUS      shift, and go to state 33
    T_STAR      shift, and go to state 34
    T_DIVIDE    shift, and go to state 35
    T_MOD       shift, and go to state 36
    T_SIZEOF    shift, and go to state 37

    UNARY_EXPRESSION    go to state 92
    OPERATOR            go to state 52
    POSTFIX_EXPRESSION  go to state 53
    PRIMARY_EXPRESSION  go to state 54


State 53

   82 UNARY_EXPRESSION: POSTFIX_EXPRESSION .
  105 POSTFIX_EXPRESSION: POSTFIX_EXPRESSION . T_LSQUAREBRACKET EXPRESSION T_RSQUAREBRACKET
  106                   | POSTFIX_EXPRESSION . T_LBRACKET T_RBRACKET
  107                   | POSTFIX_EXPRESSION . T_DOT T_VARIABLE
  108                   | POSTFIX_EXPRESSION . T_PTR_OP T_VARIABLE
  109                   | POSTFIX_EXPRESSION . T_INC_OP
  110                   | POSTFIX_EXPRESSION . T_DEC_OP

    T_INC_OP          shift, and go to state 93
    T_DEC_OP          shift, and go to state 94
    T_PTR_OP          shift, and go to state 95
    T_LBRACKET        shift, and go to state 96
    T_LSQUAREBRACKET  shift, and go to state 97
    T_DOT             shift, and go to state 98

    $default  reduce using rule 82 (UNARY_EXPRESSION)


State 54

  104 POSTFIX_EXPRESSION: PRIMARY_EXPRESSION .
